--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -1,7 +1,7 @@
-FROM python:3.10.5-slim
+FROM python:3.11-slim
 WORKDIR /app
 COPY requirements.txt /app/
 RUN pip install --no-cache-dir -r requirements.txt
-COPY . /app/
+COPY . /app
 EXPOSE 8000
-ENTRYPOINT ["/app/docker/comando.sh"]
+ENTRYPOINT ["/app/docker/entrypoint.sh"]
